# DFW

./: .gitignore  CEnvKey.pub  Map.txt  actions.h  auto.bat  base.h  create_env.bat  display.c  display.h  input.c  input.h  judge.h  main.c  map.c  map.h  play.c  play.h  run.bat  stat_judge.c  t.bat  test.bat
src/: CmakeLists.txt  base.h  display.c  main.c  (+11 more)
test/: CMakeCache.txt  CMakeLists.txt  Makefile  buf.txt  cmake_install.cmake  test.py  test_case_convert.py  test_dump.py
test/TestCase/Other/: EX-overflow3.in
test/TestCase/TestCaseG2/input/bankrupt/: set_broke5.in
test/TestCase/TestCaseG2/input/barrier/: block10.in  block11.in  block12.in  block13.in  block4.in  block5.in  block6.in  block7.in  block8.in  block9.in
test/TestCase/TestCaseG2/input/buy_tool/: buyitem13.in
test/TestCase/TestCaseG2/input/gift/: gifthouse2.in  gifthouse3.in  gifthouse4.in  gifthouse5.in
test/dump/: dump_0.txt  dump_1.txt  dump_10.txt  dump_11.txt  dump_12.txt  dump_13.txt  dump_14.txt  dump_15.txt  dump_16.txt  dump_17.txt  dump_18.txt  dump_19.txt  dump_2.txt  dump_20.txt  dump_21.txt  dump_22.txt  dump_23.txt  dump_24.txt  dump_25.txt  dump_26.txt  dump_27.txt  dump_28.txt  dump_29.txt  dump_3.txt  dump_30.txt  dump_4.txt  dump_5.txt  dump_6.txt  dump_7.txt  dump_8.txt  dump_9.txt
test/input/: input_0.txt  input_1.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
test/output/: output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
(+19 files in other folders)
